5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1709_3031.log
== TEST (2019-05-02 11:20:52) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	print(x**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:59) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	print(x**3)
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:15) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	print(round(x**3, 2)
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:30) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	print(round(x**3, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:12) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	z = x**3
	print(round(z, 2)
-- ERROR:
File "XXXX", line 12
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:19) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	print(x**2)
elif(x > 3):
	z = x**3
	print(round(z, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:45) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	z = x**2
	print(round(z, 2))
elif(x > 3):
	z = x**3
	print(round(z, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:54) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	z = x**2
	print(round(z, 2))
elif(x > 3):
	z = x**3
	print(round(z, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:00) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	z = x**2
	print(round(z, 2))
elif(x > 3):
	z = x**3
	print(round(z, 2))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:23:05) 
-- CODE:
x = float(input("Valor de x:"))

if(x <= 1):
	print(1)
elif( 1 < x and x <=2):
	print(2)
elif(2 < x and x <= 3):
	z = x**2
	print(round(z, 2))
elif(x > 3):
	z = x**3
	print(round(z, 2))
-- EXECUTION TIME:
0.199827
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
